I worked on the index.html

--- a/index.html
+++ b/index.html
@@ -10,8 +10,31 @@
     <script src="script.js"></script>
 
 <p>
-Information...
+Please make a note of the following animals
   </p>
+
+      <tr>
+        <td>
+          <img
+          src=""
+          width=""
+          />
+
+          <img
+          src=""
+          width=""
+          />
+          
+          <img
+          src=""
+          width=""
+          />
+
+          <button>
+           Next
+           </button>
+        </td>
+      </tr>
 
   </body>
 </html>
