--- a/index.html
+++ b/index.html
@@ -50,7 +50,9 @@
           <p class="m-auto t-white font-balsamiq">Your memory matters</p>
         </div>
         <div class="logo d-flex pt-3">
-          <button class="m-auto btn btn-blue btn-font">Get Started</button>
+          <!-- <button class="m-auto btn btn-blue btn-font px-5"><a href="/signup.html">Get Started</a></button> -->
+          <button class="m-auto btn btn-blue btn-font px-5">Get Started</button>
+
         </div>
       </div>
     </div>
