--- a/memoryTest.html
+++ b/memoryTest.html
@@ -41,52 +41,29 @@
     <div class="main-1 ">
       <div>
         <div class="logo d-flex pt-5">
-          <img class="m-auto pt-3" src="./images/logo-white.svg" alt="logo">
+          <img class="m-auto pt-3" src="./images/dash-icon3.svg" alt="logo">
         </div>
         <div class="logo d-flex pt-5">
-          <img class="m-auto pt-3" src="./images/brand-name.svg" alt="logo">
-        </div>
+            <p class="m-auto t-white font-balsamiq">Working Memory Test  </p>
+          </div>
         <div class="logo d-flex pt-5">
-          <p class="m-auto t-white font-balsamiq">Your memory matters</p>
-        </div>
-        <div class="logo d-flex pt-3">
-          <button onclick="playGame();" class="m-auto btn btn-blue btn-font px-5">Get Started</button>
-
+          <p class="m-auto t-white">Click anywhere to start</p>
         </div>
       </div>
     </div>
-    <div class="main-2 p-5 px-5">
-      <div class="row g-2">
-        <div class="col-4 dash-card">
+    <div class="main-2 d-flex">
+        <div class="col-6 mt-5 mx-auto dash-card">
           <div class="p-3 text-center rounded bg-light">
-            <img class="img-fluid dash-icon" src="./images/dash-icon1.svg" alt="short term memory" >
-            <h5>Short Term Memory</h5>
-            <p>Test your short term memory </p>
+            <h5>About this test </h5>
+            <p>This tests your working memory. Working memory is just as it sounds. It allows us to work on tasks without losing track of what we are doing. 
+                
+                If you want to stay on top of your scores you can see the dashboard </p>
           </div>
         </div>
-        <div class="col-4 dash-card">
-          <div class="p-3 text-center rounded bg-light">
-            <img class="img-fluid dash-icon" src="./images/dash-icon2.svg" alt="Long term memory" >
-            <h5>Long Term Memory</h5>
-            <p>Test your long-term memory </p>
-          </div>
-        </div>
-        <div class="col-4 dash-card">
-          <div class="p-3 text-center rounded bg-light">
-            <img class="img-fluid dash-icon" src="./images/dash-icon3.svg" alt="Working memory" >
-            <h5>Working Memory</h5>
-            <p>Test your working memory </p>
-          </div>
-        </div>
-      </div>
     </main>
   <footer>
 
   </footer>
-
-
-
-
 
 
   <script src="script.js"></script>
