--- a/longTerm.html
+++ b/longTerm.html
@@ -39,12 +39,12 @@
   </nav>
   <main>
     <div class="main-1 ">
-      <div onclick="workingMemory();">
+      <div onclick="longTerm();">
         <div class="logo d-flex pt-5">
-          <img class="m-auto pt-3" src="./images/dash-icon3.svg" alt="logo">
+          <img class="m-auto pt-3" src="./images/dash-icon2.svg" alt="logo">
         </div>
         <div class="logo d-flex pt-5">
-            <p class="m-auto t-white font-balsamiq">Working Memory Test  </p>
+            <p class="m-auto t-white font-balsamiq">Long Term Memory Test  </p>
           </div>
         <div class="logo d-flex pt-5">
           <p class="m-auto t-white">Click anywhere to start</p>
@@ -55,9 +55,9 @@
         <div class="col-6 mt-5 mx-auto dash-card">
           <div class="p-3 text-center rounded bg-light">
             <h5>About this test </h5>
-            <p>This tests your working memory. Working memory is just as it sounds. It allows us to work on tasks without losing track of what we are doing. 
-                
-                If you want to stay on top of your scores you can see the dashboard </p>
+            <p>This test your long term memory. Long term memory like our dusty storage box. It contains informative knowledge which will be stored in our brains forever.  
+
+                If you want to stay on top of your scores you can see the dashboard  </p>
           </div>
         </div>
     </main>
