--- a/longterm_game2.html
+++ b/longterm_game2.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width">
     <title>Coeus</title>
     <link rel="shortcut icon" href="./images/logo-orange.svg" type="image/x-icon">
-    <link href="./styles/signup.css" rel="stylesheet" type="text/css" />
+    <link href="./styles/game.css" rel="stylesheet" type="text/css" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
@@ -38,47 +38,38 @@
             </div>
         </div>
     </nav>
-
-
-
-    <main class="d-flex">
-        <div class="main-2 text-center p-4 m-auto mt-3">
-            <h3 class="font-balsamiq">Login</h3>
-            <p>Need an account ? <a href="/login.html">Sign up</a> </p>
-
-            <form>
-                <div class="mb-3 text-start">
-                    <label for="exampleInputPassword1" class="form-label">Username</label>
-                    <input type="password" class="form-control" id="exampleInputPassword1">
+    <main>
+        <div class="main-1 ">
+            <div>
+                <div class="logo d-flex pt-5">
+                    <p style="color: #FF8700;" class="m-auto t-white font-balsamiq">How many people were in this image  </p>
                 </div>
-                <div class="mb-3 text-start">
-                    <label for="exampleInputPassword1" class="form-label">Password</label>
-                    <input type="password" class="form-control" placeholder="********" id="exampleInputPassword1">
+                <div class="logo d-flex pt-5">
+                    <p class="m-auto">_____________</p>
                 </div>
-                <button type="submit" class="btn btn-orange px-5">Login</button>
-                <p>Forgot Password? <a href="/reset.html">Reset Password</a> </p>
-            </form>
+            </div>
         </div>
+        <div class="main-2 d-flex">
+            <div class="col-6 mt-5 mx-auto dash-card">
+                <div class="p-3 text-center rounded bg-light">
+                    <h5>About this test </h5>
+                    <p>This test your long term memory. Long term memory like our dusty storage box. It contains informative knowledge which will be stored in our brains forever.  
+
+                        If you want to stay on top of your scores you can see the dashboard  </p>
+                </div>
+            </div>
     </main>
+    <footer>
+
+    </footer>
 
 
-    <!-- The core Firebase JS SDK is always required and must be listed first -->
-    <script src="https://www.gstatic.com/firebasejs/8.8.0/firebase-app.js"></script>
-
-    <!-- TODO: Add SDKs for Firebase products that you want to use
-     https://firebase.google.com/docs/web/setup#available-libraries -->
-    <script src="https://www.gstatic.com/firebasejs/8.8.0/firebase-auth.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.8.0/firebase-database.js"></script>
+    <script src="script.js"></script>
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
-
-    <script src="script.js"></script>
-
-    <script src="signup.js"></script>
-
 </body>
 
 </html>
