--- a/assessment.html
+++ b/assessment.html
@@ -14,7 +14,7 @@
 <body>
   <nav class="navbar navbar-expand-lg">
     <div class="container-fluid">
-      <img class="me-3 logo-orange img-fluid"  src="./images/logo-orange.svg" alt="" srcset="">
+      <img class="me-3 logo-orange img-fluid" src="./images/logo-orange.svg" alt="" srcset="">
       <a class="navbar-brand" href="#">COEUS</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -44,34 +44,33 @@
           <img class="m-auto pt-3" src="./images/getStarted.svg" alt="logo">
         </div>
         <div class="logo d-flex">
-            <p class="m-auto t-white font-balsamiq">Assesment   </p>
-          </div>
+          <p class="m-auto t-white font-balsamiq">Assesment </p>
+        </div>
         <div class="logo d-flex pt-1">
           <p class="m-auto t-white">Click anywhere to start</p>
         </div>
       </div>
     </div>
     <div class="main-2 d-flex">
-        <div class="col-6 mt-5 mx-auto dash-card">
-          <div class="p-3 text-center rounded bg-light">
-            <h5>About this test </h5>
-            <p>This test your long term memory. Long term memory like our dusty storage box. It contains informative knowledge which will be stored in our brains forever.  
+      <div class="col-6 mt-5 mx-auto dash-card">
+        <div class="p-3 text-center rounded bg-light">
+          <h5>About this test </h5>
+          <p>This test your long term memory. Long term memory like our dusty storage box. It contains informative
+            knowledge which will be stored in our brains forever.
 
-                If you want to stay on top of your scores you can see the dashboard  </p>
-          </div>
+            If you want to stay on top of your scores you can see the dashboard </p>
         </div>
-    </main>
-  <footer>
+      </div>
+  </main>
 
-  </footer>
-
-
-  <script src="script.js"></script>
 
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
     crossorigin="anonymous"></script>
+
+  <script src="./js/game.js"></script>
+
 </body>
 
 </html>
