--- a/index.html
+++ b/index.html
@@ -80,15 +80,21 @@
         </div>
       </div>
   </main>
-  
 
+ <!-- The core Firebase JS SDK is always required and must be listed first -->
+ <script src="https://www.gstatic.com/firebasejs/8.8.0/firebase-app.js"></script>
 
-  <script src="script.js"></script>
-
-
+ <!-- TODO: Add SDKs for Firebase products that you want to use
+  https://firebase.google.com/docs/web/setup#available-libraries -->
+ <script src="https://www.gstatic.com/firebasejs/8.8.0/firebase-auth.js"></script>
+ <script src="https://www.gstatic.com/firebasejs/8.8.0/firebase-database.js"></script>
+ 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
     crossorigin="anonymous"></script>
+
+  <script src="script.js"></script>
+
 </body>
 
 </html>
