--- a/shortterm_game4.html
+++ b/shortterm_game4.html
@@ -42,16 +42,16 @@
         <div class="main-1 ">
             <div>
                 <div class="logo d-flex pt-5">
-                    <p style="color: #FF8700;" class="m-auto t-white font-balsamiq">Type the phrase below </p>
+                    <p style="color: #FF8700;" class="m-auto t-white text-center font-balsamiq">Type the phrase below </p>
                 </div>
                 <div class="logo d-flex pt-5">
-                    <p class="m-auto">____________________________________</p>
+                    <p class="m-auto">________________________________</p>
                 </div>
             </div>
         </div>
         <div class="main-2 d-flex">
-            <div class="col-6 mt-5 mx-auto dash-card">
-                <div class="p-3 text-center rounded bg-light">
+            <div class="col-lg-6 col-md-8 mt-5 mx-auto dash-card">
+                <div class="p-3 rounded bg-light">
                     <h5>About this test </h5>
                     <p>This test your short term memory. Short term memory is just how it sounds, it is kept in our brain for a short period of time but is not full encoded. For example short term memory can be used to recall a phone number that has just been recited to us.    
 
