--- a/shortterm_game5.html
+++ b/shortterm_game5.html
@@ -42,7 +42,7 @@
         <div class="main-1 ">
             <div>
                 <div class="logo d-flex pt-5">
-                    <p style="color: #FF8700;" class="m-auto t-white font-balsamiq">Pay attention to detail </p>
+                    <p style="color: #FF8700;" class="m-auto t-white text-center font-balsamiq">Pay attention to detail </p>
                 </div>
                 <div class="logo d-flex pt-5">
                     <img class="m-auto mt-5" src="./images/squares.svg" alt="Squares">
@@ -50,8 +50,8 @@
             </div>
         </div>
         <div class="main-2 d-flex">
-            <div class="col-6 mt-5 mx-auto dash-card">
-                <div class="p-3 text-center rounded bg-light">
+            <div class="col-lg-6 col-md-8 mt-5 mx-auto dash-card">
+                <div class="p-3 px-4 rounded bg-light">
                     <h5>About this test </h5>
                     <p>This test your short term memory. Short term memory is just how it sounds, it is kept in our brain for a short period of time but is not full encoded. For example short term memory can be used to recall a phone number that has just been recited to us.    
 
