--- a/assessment_game.html
+++ b/assessment_game.html
@@ -64,7 +64,7 @@
     </footer>
 
 
-    <script src="script.js"></script>
+    <script src="./js/game.js"></script>
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
