--- a/assessment_game6.html
+++ b/assessment_game6.html
@@ -46,7 +46,8 @@
                 </div>
                 <div class="logo d-flex pt-5 ">
                     <div class="m-auto ">
-                        <button style="font-size: 3rem;" class="btn btn-orange px-5 mx-5">yes</button> <button style="font-size: 3rem;" class="btn btn-blue px-5 mx-5">no</button>
+                        <button style="font-size: 3rem;" class="btn btn-orange px-5 mx-5">yes</button> <button
+                            style="font-size: 3rem;" class="btn btn-blue px-5 mx-5">no</button>
                     </div>
                 </div>
             </div>
@@ -62,17 +63,13 @@
                 </div>
             </div>
     </main>
-    <footer>
-
-    </footer>
-
-
-    <script src="script.js"></script>
-
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
+
+    <script src="./js/game.js"></script>
+
 </body>
 
 </html>
