--- a/dashboard.html
+++ b/dashboard.html
@@ -15,7 +15,7 @@
     <nav class="navbar navbar-expand-lg">
         <div class="container-fluid">
             <img class="me-3 logo-orange img-fluid" src="./images/logo-orange.svg" alt="" srcset="">
-            <a class="navbar-brand" href="#">COEUS</a>
+            <a class="navbar-brand" href="/">COEUS</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
@@ -27,14 +27,14 @@
                         <a class="nav-link dash-text" aria-current="page" href="#">DASHBOARD</a>
                     </li>
                 </ul>
-                <ul class="navbar-nav mb-2 mb-lg-0">
+                <!-- <ul class="navbar-nav mb-2 mb-lg-0">
                     <li class="nav-item">
                         <a class="nav-link t-orange" aria-current="page" href="#">Sign Up</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link t-login" aria-current="page" href="#">Login</a>
                     </li>
-                </ul>
+                </ul> -->
             </div>
         </div>
     </nav>
@@ -46,8 +46,8 @@
                     <h5 class="card-title font-balsamiq">Guest</h5>
                     <h6 class="card-subtitle my-3">joined</h6>
                     <h6 class="card-subtitle mb-2 text-muted">10 minutes ago</h6>
-                    <a href="#" class="card-link"><a href="/login.html">Login </a> or <a href="/signup.html">Sign
-                            up </a>to save your results </a>
+                    <!-- <a href="#" class="card-link"><a href="/login.html">Login </a> or <a href="/signup.html">Sign
+                            up </a>to save your results </a> -->
                 </div>
             </div>
         </div>
@@ -68,34 +68,39 @@
                                 <td>Working memory</td>
                                 <td class="text-center">1204</td>
                                 <td class="text-center">700</td>
-                                <td><img class="play-icon" src="./images/play.svg" alt="play"></td>
+                                <td><img onclick="goToGame(1)" class="play-icon" src="./images/play.svg" alt="play">
+                                </td>
                             </tr>
                             <tr>
                                 <td>Short-term Memory</td>
                                 <td class="text-center">?</td>
                                 <td class="text-center">?</td>
-                                <td><img class="play-icon" src="./images/play.svg" alt="play"></td>
+                                <td><img onclick="goToGame(2)" class="play-icon" src="./images/play.svg" alt="play">
+                                </td>
                             </tr>
-                            <tr >
-                                <td >Long-term Memory</td>
+                            <tr>
+                                <td>Long-term Memory</td>
                                 <td class="text-center">?</td>
                                 <td class="text-center">?</td>
-                                <td><img class="play-icon" src="./images/play.svg" alt="play"></td>
+                                <td><img onclick="goToGame(3)" class="play-icon" src="./images/play.svg" alt="play">
+                                </td>
                             </tr>
                         </tbody>
                     </table>
-                    
                 </div>
             </div>
         </div>
     </main>
 
-    <script src="signup.js"></script>
-
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
+
+    <script src="./js/dashboard.js"></script>
+
+    <script src="./js/game.js"></script>
+
 </body>
 
 </html>
