--- a/game4.html
+++ b/game4.html
@@ -42,10 +42,14 @@
         <div class="main-1 ">
             <div>
                 <div class="logo d-flex pt-5">
-                    <p style="color: #FF8700;" class="m-auto t-white font-balsamiq">Pay attention to this image </p>
+                    <p style="color: #FF8700;" class="m-auto t-white font-balsamiq">Remember the order </p>
                 </div>
                 <div class="logo d-flex pt-5">
-                    <img class="m-auto" src="./images/people.svg" alt="">
+                    <div class="mx-auto mt-5">
+                        <img class="img-fluid" src="./images/order-1.svg" alt="">
+                        <img class=" img-fluid" src="./images/order-2.svg" alt="">
+                        <img class="img-fluid" src="./images/order-3.svg" alt="">
+                    </div>
                 </div>
             </div>
         </div>
@@ -53,9 +57,10 @@
             <div class="col-lg-6 col-md-8 mt-5 mx-auto dash-card">
                 <div class="p-3 px-4 rounded bg-light">
                     <h5>About this test </h5>
-                    <p>This test your long term memory. Long term memory like our dusty storage box. It contains informative knowledge which will be stored in our brains forever.  
+                    <p>This tests your working memory. Working memory is just as it sounds. It allows us to work on
+                        tasks without losing track of what we are doing.
 
-                        If you want to stay on top of your scores you can see the dashboard  </p>
+                        If you want to stay on top of your scores you can see the dashboard </p>
                 </div>
             </div>
     </main>
@@ -64,7 +69,7 @@
     </footer>
 
 
-    <script src="./js/game.js"></script>
+    <script src="script.js"></script>
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
