--- a/login.html
+++ b/login.html
@@ -44,20 +44,21 @@
     <main class="d-flex">
         <div class="main-2 text-center p-4 m-auto mt-3">
             <h3 class="font-balsamiq">Login</h3>
-            <p>Need an account ? <a href="/login.html">Sign up</a> </p>
+            <p>Need an account ? <a href="/signup.html">Sign up</a> </p>
 
-            <form>
+            <!-- <form onsubmit="login();"> -->
+                <div style="color:red;" id="error"></div>
                 <div class="mb-3 text-start">
-                    <label for="exampleInputPassword1" class="form-label">Username</label>
-                    <input type="password" class="form-control" id="exampleInputPassword1">
+                    <label for="exampleInputEmail1" class="form-label">Email</label>
+                    <input type="email" class="form-control" placeholder="exampl@example.com" id="email">
                 </div>
                 <div class="mb-3 text-start">
                     <label for="exampleInputPassword1" class="form-label">Password</label>
-                    <input type="password" class="form-control" placeholder="********" id="exampleInputPassword1">
+                    <input type="password" class="form-control" placeholder="********" id="passwordOne">
                 </div>
-                <button type="submit" class="btn btn-orange px-5">Login</button>
-                <p>Forgot Password? <a href="/reset.html">Reset Password</a> </p>
-            </form>
+                <button id="login" type="submit" class="btn btn-orange px-5">Login</button>
+                <!-- <p>Forgot Password? <a href="/reset.html">Reset Password</a> </p> -->
+            <!-- </form> -->
         </div>
     </main>
 
@@ -77,7 +78,7 @@
 
     <script src="script.js"></script>
 
-    <script src="signup.js"></script>
+    <script src="./js/login.js"></script>
 
 </body>
 
