--- a/longterm_game3.html
+++ b/longterm_game3.html
@@ -50,8 +50,8 @@
             </div>
         </div>
         <div class="main-2 d-flex">
-            <div class="col-6 mt-5 mx-auto dash-card">
-                <div class="p-3 text-center rounded bg-light">
+            <div class="col-lg-6 col-md-8 mt-5 mx-auto dash-card">
+                <div class="p-3 px-4 rounded bg-light">
                     <h5>About this test </h5>
                     <p>This test your long term memory. Long term memory like our dusty storage box. It contains
                         informative knowledge which will be stored in our brains forever.
@@ -65,7 +65,7 @@
     </footer>
 
 
-    <script src="script.js"></script>
+    <script src="./js/game.js"></script>
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
