--- a/shortTerm.html
+++ b/shortTerm.html
@@ -44,18 +44,18 @@
           <img class="m-auto pt-3" src="./images/dash-icon2.svg" alt="logo">
         </div>
         <div class="logo d-flex pt-5">
-            <p class="m-auto t-white font-balsamiq">Short Term Memory Test    </p>
+            <p class="m-auto t-white text-center font-balsamiq">Short Term Memory Test    </p>
           </div>
         <div class="logo d-flex pt-5">
-          <p class="m-auto t-white">Click anywhere to start</p>
+          <p class="m-auto t-white text-center">Click anywhere to start</p>
         </div>
       </div>
     </div>
     <div class="main-2 d-flex">
-        <div class="col-6 mt-5 mx-auto dash-card">
-          <div class="p-3 text-center rounded bg-light">
-            <h5>About this test </h5>
-            <p>This test your long term memory. Long term memory like our dusty storage box. It contains informative knowledge which will be stored in our brains forever.  
+        <div class="col-lg-6 col-md-8 mt-5 mx-auto dash-card">
+          <div class="p-3 px-4 rounded bg-light">
+            <h5 >About this test </h5>
+            <p >This test your long term memory. Long term memory like our dusty storage box. It contains informative knowledge which will be stored in our brains forever.  
 
                 If you want to stay on top of your scores you can see the dashboard  </p>
           </div>
@@ -66,7 +66,7 @@
   </footer>
 
 
-  <script src="script.js"></script>
+  <script src="./js/game.js"></script>
 
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
