--- a/shortterm_game.html
+++ b/shortterm_game.html
@@ -42,20 +42,26 @@
         <div class="main-1 ">
             <div>
                 <div class="logo d-flex pt-5">
-                    <p style="color: #FF8700;" class="m-auto t-white font-balsamiq">Remeber these numbers  </p>
+                    <p style="color: #FF8700;" class="m-auto t-white text-center font-balsamiq">Remeber these numbers
+                    </p>
+                </div>
+                <div class="logo d-flex pt-1">
+                    <p class="m-auto d-block t-white text-center font-balsamiq" ><span id="timer"></span></p>
                 </div>
                 <div class="logo d-flex pt-5">
-                    <img class="m-auto mt-5" src="./images/num-read.svg" alt="">
+                    <img class="m-auto mt-5 img-fluid" src="./images/num-read.svg" alt="">
                 </div>
             </div>
         </div>
         <div class="main-2 d-flex">
-            <div class="col-6 mt-5 mx-auto dash-card">
-                <div class="p-3 text-center rounded bg-light">
+            <div class="col-lg-6 col-md-8 mt-5 mx-auto dash-card">
+                <div class="p-3 px-4 rounded bg-light">
                     <h5>About this test </h5>
-                    <p>This test your short term memory. Short term memory is just how it sounds, it is kept in our brain for a short period of time but is not full encoded. For example short term memory can be used to recall a phone number that has just been recited to us.    
+                    <p>This test your short term memory. Short term memory is just how it sounds, it is kept in our
+                        brain for a short period of time but is not full encoded. For example short term memory can be
+                        used to recall a phone number that has just been recited to us.
 
-                        If you want to stay on top of your scores you can see the dashboard   </p>
+                        If you want to stay on top of your scores you can see the dashboard </p>
                 </div>
             </div>
     </main>
@@ -64,7 +70,9 @@
     </footer>
 
 
-    <script src="script.js"></script>
+    <script src="./js/game.js"></script>
+
+    <script src="./js/shortmem.js"></script>
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
