--- a/shortterm_game2.html
+++ b/shortterm_game2.html
@@ -42,34 +42,39 @@
         <div class="main-1 ">
             <div>
                 <div class="logo d-flex pt-5">
-                    <p style="color: #FF8700;" class="m-auto t-white font-balsamiq">Type the numbers below  </p>
+                    <p style="color: #FF8700;" id="instruction" class="m-auto t-white text-center font-balsamiq">Type the numbers below
+                    </p>
+                </div>
+                <div class="logo d-flex pt-1">
+                    <p class="m-auto d-block t-white text-center font-balsamiq"><span id="timer"></span></p>
                 </div>
                 <div class="logo d-flex pt-5">
-                    <p class="m-auto">__ __ &nbsp;  __ __ __ __</p>
+
+                    <input id="editable" oninput="check();" maxlength="6" type="number" class="text-center m-auto font-balsamiq" contenteditable="true"/>
                 </div>
             </div>
         </div>
         <div class="main-2 d-flex">
-            <div class="col-6 mt-5 mx-auto dash-card">
-                <div class="p-3 text-center rounded bg-light">
+            <div class="col-lg-6 col-md-6 mt-5 mx-auto dash-card">
+                <div class="p-3 px-4 rounded bg-light">
                     <h5>About this test </h5>
-                    <p>This test your short term memory. Short term memory is just how it sounds, it is kept in our brain for a short period of time but is not full encoded. For example short term memory can be used to recall a phone number that has just been recited to us.    
+                    <p>This test your short term memory. Short term memory is just how it sounds, it is kept in our
+                        brain for a short period of time but is not full encoded. For example short term memory can be
+                        used to recall a phone number that has just been recited to us.
 
-                        If you want to stay on top of your scores you can see the dashboard   </p>
+                        If you want to stay on top of your scores you can see the dashboard </p>
                 </div>
             </div>
     </main>
-    <footer>
-
-    </footer>
-
-
-    <script src="script.js"></script>
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
+
+    <script src="./js/game.js"></script>
+    <script src="./js/shortmem.js"></script>
+
 </body>
 
 </html>
