--- a/shortterm_game3.html
+++ b/shortterm_game3.html
@@ -42,7 +42,7 @@
         <div class="main-1 ">
             <div>
                 <div class="logo d-flex pt-5">
-                    <p style="color: #FF8700;" class="m-auto t-white font-balsamiq">Remeber this phrase </p>
+                    <p style="color: #FF8700;" class="m-auto t-white text-center font-balsamiq">Remeber this phrase </p>
                 </div>
                 <div class="logo d-flex pt-5">
                     <img class="m-auto mt-5" src="./images/SoccerMom-text.svg" alt="Pie Pizza Peperoni Pasta">
@@ -50,7 +50,7 @@
             </div>
         </div>
         <div class="main-2 d-flex">
-            <div class="col-6 mt-5 mx-auto dash-card">
+            <div class="col-lg-6 col-md-8 mt-5 mx-auto dash-card">
                 <div class="p-3 text-center rounded bg-light">
                     <h5>About this test </h5>
                     <p>This test your short term memory. Short term memory is just how it sounds, it is kept in our brain for a short period of time but is not full encoded. For example short term memory can be used to recall a phone number that has just been recited to us.    
@@ -59,17 +59,13 @@
                 </div>
             </div>
     </main>
-    <footer>
-
-    </footer>
-
-
-    <script src="script.js"></script>
-
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
+
+        <script src="./js/game.js"></script>
+
 </body>
 
 </html>
