--- a/signup.html
+++ b/signup.html
@@ -42,7 +42,7 @@
             <h3 class="font-balsamiq">Sign up</h3>
             <p>Already have an account ? <a href="/login.html">Login</a> </p>
 
-            <form onsubmit="signUp();"">
+            <!-- <form onsubmit="signUp();"> -->
                  <div style="color:red;" id="error"></div>
                 <div class="mb-3 text-start">
                     <label for="exampleInputEmail1" class="form-label">Email</label>
@@ -62,7 +62,7 @@
                     <input type="password" required class="form-control" placeholder="********" id="passwordTwo">
                 </div>
                 <button type="submit" id="signup" class="btn btn-orange px-5">Sign Up</button>
-            </form>
+            <!-- </form> -->
         </div>
     </main>
 
