--- a/congrats.html
+++ b/congrats.html
@@ -42,38 +42,54 @@
         <div class="main-1 ">
             <div>
                 <div class="logo d-flex pt-5">
-                    <p style="color: #FF8700;" id="instruction" class="m-auto t-white text-center font-balsamiq">Type the numbers below
+                    <p style="color: #000000;" id="instruction" class="m-auto t-white text-center font-balsamiq">
+                        <span><img src="./images/congrats.svg" alt="congrats emoji"></span>Congrats! <span><img
+                                src="./images/congrats.svg" alt="congrats emoji">
                     </p>
                 </div>
-                <div class="logo d-flex pt-1">
-                    <p class="m-auto d-block t-white text-center font-balsamiq"><span id="timer"></span></p>
+                <div class="logo d-flex pt-5">
+                    <p style="color: #FF8700;" id="instruction" class="m-auto t-white text-center font-balsamiq">Your
+                        score </p>
                 </div>
                 <div class="logo d-flex pt-5">
-                    <input id="editable"  maxlength="6" type="number" class="text-center m-auto font-balsamiq" />
+                    <p style="color: #FF8700;" id="instruction" class="m-auto t-white text-center font-balsamiq">1000
+                    </p>
+                </div>
+                <div class="logo d-flex pt-3">
+                    <button class="m-auto btn btn-blue btn-font px-5"><a style="color: #ffffff;" href="/login.html">Save
+                            your score</a></button>
+                    <button class="m-auto btn btn-blue btn-font px-5"><a style="color: #ffffff;"
+                            href="/shortTerm.html">Play again</a></button>
+
                 </div>
             </div>
         </div>
-        <div class="main-2 d-flex">
-            <div class="col-lg-6 col-md-6 mt-5 mx-auto dash-card">
-                <div class="p-3 px-4 rounded bg-light">
-                    <h5>About this test </h5>
-                    <p>This test your short term memory. Short term memory is just how it sounds, it is kept in our
-                        brain for a short period of time but is not full encoded. For example short term memory can be
-                        used to recall a phone number that has just been recited to us.
-
-                        If you want to stay on top of your scores you can see the dashboard </p>
+        <div class="main-2 p-2 px-5">
+            <div class="row g-2">
+                <h3 class="font-balsamiq">Other tests</h3>
+                <div onclick="goToGame(2);" class="col-md-4 col-12 dash-card">
+                  <div class="p-3 text-center rounded bg-light">
+                    <img class="img-fluid dash-icon" src="./images/dash-icon2.svg" alt="Long term memory">
+                    <h5>Long Term Memory</h5>
+                    <p>Test your long-term memory </p>
+                  </div>
                 </div>
-            </div>
+                <div onclick="goToGame(3);" class="col-md-4 col-12 dash-card">
+                  <div class="p-3 text-center rounded bg-light">
+                    <img class="img-fluid dash-icon" src="./images/dash-icon3.svg" alt="Working memory">
+                    <h5>Working Memory</h5>
+                    <p>Test your working memory </p>
+                  </div>
+                </div>
+              </div>
+        </div>
     </main>
-
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
 
     <script src="./js/game.js"></script>
-    <script src="./js/shortmem2.js"></script>
-
 </body>
 
 </html>
