--- a/index.html
+++ b/index.html
@@ -94,6 +94,8 @@
     crossorigin="anonymous"></script>
 
   <script src="script.js"></script>
+  <script src="./js/game.js"></script>
+
 
 </body>
 
