--- a/shortterm_game3.html
+++ b/shortterm_game3.html
@@ -44,6 +44,9 @@
                 <div class="logo d-flex pt-5">
                     <p style="color: #FF8700;" class="m-auto t-white text-center font-balsamiq">Remeber this phrase </p>
                 </div>
+                <div class="logo d-flex pt-1">
+                    <p class="m-auto d-block t-white text-center font-balsamiq"><span id="timer"></span></p>
+                </div>
                 <div class="logo d-flex pt-5">
                     <img class="m-auto mt-5" src="./images/SoccerMom-text.svg" alt="Pie Pizza Peperoni Pasta">
                 </div>
@@ -65,6 +68,7 @@
         crossorigin="anonymous"></script>
 
         <script src="./js/game.js"></script>
+        <script src="./js/shortmem3.js"></script>
 
 </body>
 
