game update --v1 almost ready

--- a/assessment.html
+++ b/assessment.html
@@ -39,7 +39,7 @@
   </nav>
   <main>
     <div class="main-1 ">
-      <div onclick="longTerm();">
+      <div onclick="assess();">
         <div class="logo d-flex pt-3">
           <img class="m-auto pt-3" src="./images/getStarted.svg" alt="logo">
         </div>
