--- a/assessment_game5.html
+++ b/assessment_game5.html
@@ -42,7 +42,10 @@
         <div class="main-1 ">
             <div>
                 <div class="logo d-flex pt-5">
-                    <p style="color: #FF8700;" class="m-auto t-white font-balsamiq">Type the phrase below </p>
+                    <p style="color: #FF8700;" id="instruction" class="m-auto t-white font-balsamiq">Pay attention </p>
+                </div>
+                <div class="logo d-flex pt-1">
+                    <p class="m-auto d-block t-white text-center font-balsamiq"><span id="timer"></span></p>
                 </div>
                 <div class="logo d-flex pt-5">
                     <img class="m-auto pt-3" src="./images/science.svg" alt="logo">
@@ -60,17 +63,13 @@
                 </div>
             </div>
     </main>
-    <footer>
-
-    </footer>
-
-
-    <script src="./js/game.js"></script>
-
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
+
+        <script src="./js/game.js"></script>
+        <script src="./js/assessmen5.js"></script>
 </body>
 
 </html>
