--- a/congrats.html
+++ b/congrats.html
@@ -56,8 +56,8 @@
                     </p>
                 </div>
                 <div class="logo d-flex pt-3">
-                    <button class="m-auto btn btn-blue btn-font px-5"><a style="color: #ffffff;" href="/login.html">Save
-                            your score</a></button>
+                    <!-- <button class="m-auto btn btn-blue btn-font px-5"><a style="color: #ffffff;" href="/login.html">Save
+                            your score</a></button> -->
                     <button class="m-auto btn btn-blue btn-font px-5"><a style="color: #ffffff;"
                             href="/shortTerm.html">Play again</a></button>
 
