--- a/game5.html
+++ b/game5.html
@@ -41,26 +41,26 @@
     <main>
         <div class="main-1 ">
             <div>
-                <div class="logo d-flex pt-5">
-                    <p style="color: #FF8700;" id="instruction" class="m-auto t-white font-balsamiq">Was the man holding a knife ? </p>
+                <div class="logo d-flex pt-3">
+                    <p style="color: #FF8700;" id="instruction" class="m-auto t-white font-balsamiq">Pay close attention
+                    </p>
                 </div>
                 <div class="logo d-flex pt-1">
                     <p class="m-auto d-block t-white text-center font-balsamiq"><span id="timer"></span></p>
                 </div>
-                <div class="logo d-flex pt-5 ">
-                    <div class="m-auto ">
-                        <button id="yes" style="font-size: 3rem;" onclick="yes();" class="btn btn-orange px-5 mx-5">yes</button> <button id="no" onclick="no();"
-                            style="font-size: 3rem;" class="btn btn-blue px-5 mx-5">no</button>
+                <div class="logo d-flex pt-1">
+                    <div class="mx-auto mt-1">
+                        <img class="img-fluid" src="./images/pay-close.svg" alt="">
                     </div>
                 </div>
             </div>
         </div>
         <div class="main-2 d-flex">
-            <div class="col-6 mt-5 mx-auto dash-card">
-                <div class="p-3 text-center rounded bg-light">
+            <div class="col-lg-6 col-md-8 mt-5 mx-auto dash-card">
+                <div class="p-3 px-4 rounded bg-light">
                     <h5>About this test </h5>
-                    <p>This test your long term memory. Long term memory like our dusty storage box. It contains
-                        informative knowledge which will be stored in our brains forever.
+                    <p>This tests your working memory. Working memory is just as it sounds. It allows us to work on
+                        tasks without losing track of what we are doing.
 
                         If you want to stay on top of your scores you can see the dashboard </p>
                 </div>
@@ -71,8 +71,8 @@
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
 
-        <script src="./js/game.js"></script>
-        <script src="./js/assessmen6.js"></script>
+    <script src="./js/game.js"></script>
+    <script src="./js/game5.js"></script>
 </body>
 
 </html>
