--- a/game6.html
+++ b/game6.html
@@ -42,7 +42,7 @@
         <div class="main-1 ">
             <div>
                 <div class="logo d-flex pt-5">
-                    <p style="color: #FF8700;" id="instruction" class="m-auto t-white font-balsamiq">Was the man holding a knife ? </p>
+                    <p style="color: #FF8700;" id="instruction" class="m-auto t-white font-balsamiq">Was the man wearing glasses ? </p>
                 </div>
                 <div class="logo d-flex pt-1">
                     <p class="m-auto d-block t-white text-center font-balsamiq"><span id="timer"></span></p>
