--- a/shortterm_game3.html
+++ b/shortterm_game3.html
@@ -48,7 +48,7 @@
                     <p class="m-auto d-block t-white text-center font-balsamiq"><span id="timer"></span></p>
                 </div>
                 <div class="logo d-flex pt-5">
-                    <img class="m-auto mt-5" src="./images/SoccerMom-text.svg" alt="Pie Pizza Peperoni Pasta">
+                    <img class="m-auto mt-5" src="./images/SoccerMom-text.svg" alt="Soccer Mom Roasted Pickles">
                 </div>
             </div>
         </div>
