--- a/assessment_game.html
+++ b/assessment_game.html
@@ -44,6 +44,9 @@
                 <div class="logo d-flex pt-5">
                     <p style="color: #FF8700;" class="m-auto t-white font-balsamiq">Remeber these numbers  </p>
                 </div>
+                <div class="logo d-flex pt-1">
+                    <p class="m-auto d-block t-white text-center font-balsamiq"><span id="timer"></span></p>
+                </div>
                 <div class="logo d-flex pt-5">
                     <img class="m-auto mt-5" src="./images/num-read-2.svg" alt="Pie Pizza Peperoni Pasta">
                 </div>
@@ -59,17 +62,14 @@
                 </div>
             </div>
     </main>
-    <footer>
-
-    </footer>
-
-
-    <script src="./js/game.js"></script>
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
+
+        <script src="./js/game.js"></script>
+        <script src="./js/assessmen.js"></script>
 </body>
 
 </html>
