--- a/assessment_game2.html
+++ b/assessment_game2.html
@@ -42,11 +42,14 @@
         <div class="main-1 ">
             <div>
                 <div class="logo d-flex pt-5">
-                    <p style="color: #FF8700;" class="m-auto t-white font-balsamiq">What was the first number ?
+                    <p style="color: #FF8700;" id="instruction" class="m-auto t-white font-balsamiq">What was the first number ?
                     </p>
                 </div>
+                <div class="logo d-flex pt-1">
+                    <p class="m-auto d-block t-white text-center font-balsamiq"><span id="timer"></span></p>
+                </div>
                 <div class="logo d-flex pt-5">
-                    <p class="m-auto">__</p>
+                    <input id="editable"  maxlength="6" type="number" class="text-center m-auto font-balsamiq" />
                 </div>
             </div>
         </div>
@@ -60,17 +63,13 @@
                 </div>
             </div>
     </main>
-    <footer>
-
-    </footer>
-
-
-    <script src="./js/game.js"></script>
-
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
+
+        <script src="./js/game.js"></script>
+        <script src="./js/assessmen2.js"></script>
 </body>
 
 </html>
