--- a/assessment_game3.html
+++ b/assessment_game3.html
@@ -45,8 +45,11 @@
                     <p style="color: #FF8700;" class="m-auto t-white font-balsamiq">Remeber this phrase  
                     </p>
                 </div>
+                <div class="logo d-flex pt-1">
+                    <p class="m-auto d-block t-white text-center font-balsamiq"><span id="timer"></span></p>
+                </div>
                 <div class="logo d-flex pt-5">
-                    <img class="m-auto mt-5" src="./images/num-read-2.svg" alt="Pie Pizza Peperoni Pasta">
+                    <img class="m-auto mt-5" src="./images/The-duck-text.svg" alt="The duck saw the cow">
                 </div>
             </div>
         </div>
@@ -66,7 +69,7 @@
         crossorigin="anonymous"></script>
 
         <script src="./js/game.js"></script>
-
+        <script src="./js/assessmen3.js"></script>
 </body>
 
 </html>
