--- a/game.html
+++ b/game.html
@@ -43,9 +43,12 @@
         <div class="logo d-flex pt-5">
             <p style="color: #FF8700;" class="m-auto t-white font-balsamiq">Remember these numbers   </p>
           </div>
-        <div class="logo d-flex pt-5">
-          <p class="m-auto ">2 4 7 9 6</p>
+          <div class="logo d-flex pt-1">
+            <p class="m-auto d-block t-white text-center font-balsamiq"><span id="timer"></span></p>
         </div>
+        <div class="logo d-flex pt-5">
+          <img class="m-auto mt-5" src="./images/num-read-3.svg" alt="24796">
+      </div>
       </div>
     </div>
     <div class="main-2 d-flex">
@@ -58,17 +61,13 @@
           </div>
         </div>
     </main>
-  <footer>
-
-  </footer>
-
-
-  <script src="script.js"></script>
-
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
     crossorigin="anonymous"></script>
+
+    <script src="./js/game.js"></script>
+    <script src="./js/game1.js"></script>
 </body>
 
 </html>
