--- a/game2.html
+++ b/game2.html
@@ -14,7 +14,7 @@
 <body>
   <nav class="navbar navbar-expand-lg">
     <div class="container-fluid">
-      <img class="me-3 logo-orange img-fluid"  src="./images/logo-orange.svg" alt="" srcset="">
+      <img class="me-3 logo-orange img-fluid" src="./images/logo-orange.svg" alt="" srcset="">
       <a class="navbar-brand" href="#">COEUS</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -41,34 +41,34 @@
     <div class="main-1 ">
       <div>
         <div class="logo d-flex pt-5">
-            <p style="color: #FF8700;" class="m-auto t-white font-balsamiq">Type the numbers below    </p>
-          </div>
+          <p style="color: #FF8700;" id="instruction" class="m-auto t-white font-balsamiq">Type the numbers below </p>
+        </div>
+        <div class="logo d-flex pt-1">
+          <p class="m-auto d-block t-white text-center font-balsamiq"><span id="timer"></span></p>
+        </div>
         <div class="logo d-flex pt-5">
-          <p class="m-auto ">_ _ _ _ _</p>
+          <input id="editable" maxlength="5" type="number" class="text-center m-auto font-balsamiq" />
         </div>
       </div>
     </div>
     <div class="main-2 d-flex">
-        <div class="col-6 mt-5 mx-auto dash-card">
-          <div class="p-3 text-center rounded bg-light">
-            <h5>About this test </h5>
-            <p>This tests your working memory. Working memory is just as it sounds. It allows us to work on tasks without losing track of what we are doing. 
-                
-                If you want to stay on top of your scores you can see the dashboard </p>
-          </div>
+      <div class="col-6 mt-5 mx-auto dash-card">
+        <div class="p-3 text-center rounded bg-light">
+          <h5>About this test </h5>
+          <p>This tests your working memory. Working memory is just as it sounds. It allows us to work on tasks without
+            losing track of what we are doing.
+
+            If you want to stay on top of your scores you can see the dashboard </p>
         </div>
-    </main>
-  <footer>
-
-  </footer>
-
-
-  <script src="script.js"></script>
-
+      </div>
+  </main>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
     crossorigin="anonymous"></script>
+
+  <script src="./js/game.js"></script>
+  <script src="./js/game2.js"></script>
 </body>
 
 </html>
