--- a/game3.html
+++ b/game3.html
@@ -42,45 +42,39 @@
         <div class="main-1 ">
             <div>
                 <div class="logo d-flex pt-5">
-                    <p class="m-auto font-balsamiq">Congrats</p>
+                    <p style="color: #FF8700;" id="instruction" class="m-auto t-white font-balsamiq">Remember the order </p>
                 </div>
+                <div class="logo d-flex pt-1">
+                    <p class="m-auto d-block t-white text-center font-balsamiq"><span id="timer"></span></p>
+                  </div>
                 <div class="logo d-flex pt-5">
-                    <p style="color: #FF8700;" class="m-auto t-white font-balsamiq">Your score </p>
-                </div>
-                <div class="logo d-flex pt-5">
-                    <p style="color: #FF8700;" class="m-auto t-white font-balsamiq">1202 </p>
+                    <div class="mx-auto mt-5">
+                        <img class="img-fluid" src="./images/order-1.svg" alt="">
+                        <img class=" img-fluid" src="./images/order-2.svg" alt="">
+                        <img class="img-fluid" src="./images/order-3.svg" alt="">
+                    </div>
                 </div>
             </div>
         </div>
-        <div class="main-2 p-3 px-5">
-            <h4 class="font-balsamiq">Other tests</h4>
+        <div class="main-2 d-flex">
+            <div class="col-lg-6 col-md-8 mt-5 mx-auto dash-card">
+                <div class="p-3 px-4 rounded bg-light">
+                    <h5>About this test </h5>
+                    <p>This tests your working memory. Working memory is just as it sounds. It allows us to work on
+                        tasks without losing track of what we are doing.
 
-            <div class="row g-2">
-                <div class="col-4 dash-card">
-                    <div class="p-3 text-center rounded bg-light">
-                        <img class="img-fluid dash-icon" src="./images/dash-icon1.svg" alt="short term memory">
-                        <h5>Short Term Memory</h5>
-                        <p>Test your short term memory </p>
-                    </div>
-                </div>
-                <div class="col-4 dash-card">
-                    <div class="p-3 text-center rounded bg-light">
-                        <img class="img-fluid dash-icon" src="./images/dash-icon2.svg" alt="Long term memory">
-                        <h5>Long Term Memory</h5>
-                        <p>Test your long-term memory </p>
-                    </div>
+                        If you want to stay on top of your scores you can see the dashboard </p>
                 </div>
             </div>
-        </div>
     </main>
-
-
-    <script src="script.js"></script>
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
+
+        <script src="./js/game.js"></script>
+        <script src="./js/game3.js"></script>
 </body>
 
 </html>
