--- a/game4.html
+++ b/game4.html
@@ -42,7 +42,7 @@
         <div class="main-1 ">
             <div>
                 <div class="logo d-flex pt-5">
-                    <p style="color: #FF8700;" class="m-auto t-white font-balsamiq">Remember the order </p>
+                    <p style="color: #FF8700;" class="m-auto t-white font-balsamiq">Put the images in the correct order </p>
                 </div>
                 <div class="logo d-flex pt-5">
                     <div class="mx-auto mt-5">
@@ -64,13 +64,6 @@
                 </div>
             </div>
     </main>
-    <footer>
-
-    </footer>
-
-
-    <script src="script.js"></script>
-
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
