--- a/longterm_game.html
+++ b/longterm_game.html
@@ -41,10 +41,13 @@
     <main>
         <div class="main-1 ">
             <div>
-                <div class="logo d-flex pt-5">
+                <div class="logo d-flex pt-2">
                     <p style="color: #FF8700;" class="m-auto t-white font-balsamiq">Pay attention to this image </p>
                 </div>
-                <div class="logo d-flex pt-5">
+                <div class="logo d-flex pt-1">
+                    <p class="m-auto d-block t-white text-center font-balsamiq"><span id="timer"></span></p>
+                </div>
+                <div class="logo d-flex pt-2">
                     <img class="m-auto" src="./images/people.svg" alt="">
                 </div>
             </div>
@@ -53,23 +56,21 @@
             <div class="col-lg-6 col-md-8 mt-5 mx-auto dash-card">
                 <div class="p-3 px-4 rounded bg-light">
                     <h5>About this test </h5>
-                    <p>This test your long term memory. Long term memory like our dusty storage box. It contains informative knowledge which will be stored in our brains forever.  
+                    <p>This test your long term memory. Long term memory like our dusty storage box. It contains
+                        informative knowledge which will be stored in our brains forever.
 
-                        If you want to stay on top of your scores you can see the dashboard  </p>
+                        If you want to stay on top of your scores you can see the dashboard </p>
                 </div>
             </div>
     </main>
-    <footer>
-
-    </footer>
-
-
-    <script src="./js/game.js"></script>
-
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
+
+
+    <script src="./js/game.js"></script>
+    <script src="./js/longmem.js"></script>
 </body>
 
 </html>
