--- a/memoryTest.html
+++ b/memoryTest.html
@@ -23,15 +23,15 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link dash-text" aria-current="page" href="#">DASHBOARD</a>
+            <a class="nav-link dash-text" aria-current="page" href="./dashboard.html">DASHBOARD</a>
           </li>
         </ul>
         <ul class="navbar-nav mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link t-orange" aria-current="page" href="#">Sign Up</a>
+            <a class="nav-link t-orange" aria-current="page" href="./signup.html">Sign Up</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link t-login" aria-current="page" href="#">Login</a>
+            <a class="nav-link t-login" aria-current="page" href="./login.html">Login</a>
           </li>
         </ul>
       </div>
@@ -61,17 +61,13 @@
           </div>
         </div>
     </main>
-  <footer>
-
-  </footer>
-
-
-  <script src="script.js"></script>
 
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
     crossorigin="anonymous"></script>
+
+    <script src="./js/game.js"></script>
 </body>
 
 </html>
