--- a/assessment_game.html
+++ b/assessment_game.html
@@ -24,7 +24,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link dash-text" aria-current="page" href="#">DASHBOARD</a>
+                        <a class="nav-link dash-text" aria-current="page" href="./signup.html">DASHBOARD</a>
                     </li>
                 </ul>
                 <ul class="navbar-nav mb-2 mb-lg-0">
