--- a/assessment_game.html
+++ b/assessment_game.html
@@ -29,10 +29,10 @@
                 </ul>
                 <ul class="navbar-nav mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link t-orange" aria-current="page" href="#">Sign Up</a>
+                        <a class="nav-link t-orange" aria-current="page" href="./signup.html">Sign Up</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link t-login" aria-current="page" href="#">Login</a>
+                        <a class="nav-link t-login" aria-current="page" href="./login.html">Login</a>
                     </li>
                 </ul>
             </div>
