--- a/memoryTest.html
+++ b/memoryTest.html
@@ -23,7 +23,7 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link dash-text" aria-current="page" href="./dashboard.html">DASHBOARD</a>
+            <a class="nav-link dash-text" aria-current="page" href="./login.html">DASHBOARD</a>
           </li>
         </ul>
         <ul class="navbar-nav mb-2 mb-lg-0">
