--- a/assessment_game3.html
+++ b/assessment_game3.html
@@ -24,7 +24,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link dash-text" aria-current="page" href="/dashboard.html">DASHBOARD</a>
+                        <a class="nav-link dash-text" aria-current="page" href="./signup.html">DASHBOARD</a>
                     </li>
                 </ul>
                 <ul class="navbar-nav mb-2 mb-lg-0">
@@ -32,7 +32,7 @@
                         <a class="nav-link t-orange" aria-current="page" href="/signup.html">Sign Up</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link t-login" aria-current="page" href="#">Login</a>
+                        <a class="nav-link t-login" aria-current="page" href="./login.html">Login</a>
                     </li>
                 </ul>
             </div>
