--- a/dashboard.html
+++ b/dashboard.html
@@ -22,9 +22,9 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link dash-text" aria-current="page" href="#">DASHBOARD</a>
+                        <a class="nav-link dash-text" aria-current="page" href="./dashboard.html">DASHBOARD</a>
                     </li>
                 </ul>
                 <!-- <ul class="navbar-nav mb-2 mb-lg-0">
