--- a/game6.html
+++ b/game6.html
@@ -24,15 +24,15 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link dash-text" aria-current="page" href="#">DASHBOARD</a>
+                        <a class="nav-link dash-text" aria-current="page" href="./signup.html">DASHBOARD</a>
                     </li>
                 </ul>
                 <ul class="navbar-nav mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link t-orange" aria-current="page" href="#">Sign Up</a>
+                        <a class="nav-link t-orange" aria-current="page" href="./signup.html">Sign Up</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link t-login" aria-current="page" href="#">Login</a>
+                        <a class="nav-link t-login" aria-current="page" href="./login.html">Login</a>
                     </li>
                 </ul>
             </div>
