--- a/login.html
+++ b/login.html
@@ -22,19 +22,19 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <!-- <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
                         <a class="nav-link dash-text" aria-current="page" href="#">DASHBOARD</a>
                     </li>
-                </ul>
-                <ul class="navbar-nav mb-2 mb-lg-0">
+                </ul> -->
+                <!-- <ul class="navbar-nav mb-2 mb-lg-0">
                     <li class="nav-item">
                         <a class="nav-link t-orange" aria-current="page" href="#">Sign Up</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link t-login" aria-current="page" href="#">Login</a>
                     </li>
-                </ul>
+                </ul> -->
             </div>
         </div>
     </nav>
