--- a/signup.html
+++ b/signup.html
@@ -21,7 +21,7 @@
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <!-- <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
                 <a class="nav-link dash-text" aria-current="page" href="/index.html">DASHBOARD</a>
               </li>
@@ -33,7 +33,7 @@
               <li class="nav-item">
                 <a class="nav-link t-login" aria-current="page" href="/login.html">Login</a>
               </li>
-            </ul>
+            </ul> -->
           </div>
         </div>
       </nav>
