score update feat added

--- a/assessment_game3.html
+++ b/assessment_game3.html
@@ -57,9 +57,9 @@
             <div class="col-lg-6 col-md-8 mt-5 mx-auto dash-card">
                 <div class="p-3 text-center rounded bg-light">
                     <h5>About this test </h5>
-                    <p>This test your short term memory. Short term memory is just how it sounds, it is kept in our brain for a short period of time but is not full encoded. For example short term memory can be used to recall a phone number that has just been recited to us.    
+                    <p>This is a general assesment test. You can use it to see how well your memory is. You can also come back to it to practice for other memory tests.     
 
-                        If you want to stay on top of your scores you can see the dashboard   </p>
+                        If you want to stay on top of your scores you can see the dashboard    </p>
                 </div>
             </div>
     </main>
