--- a/congrats.html
+++ b/congrats.html
@@ -52,7 +52,7 @@
                         score </p>
                 </div>
                 <div class="logo d-flex pt-5">
-                    <p style="color: #FF8700;" id="instruction" class="m-auto t-white text-center font-balsamiq">1000
+                    <p style="color: #FF8700;" id="score" class="m-auto t-white text-center font-balsamiq">1000
                     </p>
                 </div>
                 <div class="logo d-flex pt-3">
