--- a/game6.html
+++ b/game6.html
@@ -49,8 +49,8 @@
                 </div>
                 <div class="logo d-flex pt-5 ">
                     <div class="m-auto ">
-                        <button id="yes" style="font-size: 3rem;" onclick="yes();" class="btn btn-orange px-5 mx-5">yes</button> <button id="no" onclick="no();"
-                            style="font-size: 3rem;" class="btn btn-blue px-5 mx-5">no</button>
+                        <button id="yes" style="font-size: 3rem;" onclick="yes();" class="btn btn-orange px-md-5 px-4 mx-3 mx-md-5">yes</button> <button id="no" onclick="no();"
+                            style="font-size: 3rem;" class="btn btn-blue px-md-5 px-4 mx-3 mx-md-5">no</button>
                     </div>
                 </div>
             </div>
