--- a/assessment_game5.html
+++ b/assessment_game5.html
@@ -56,10 +56,9 @@
             <div class="col-6 mt-5 mx-auto dash-card">
                 <div class="p-3 text-center rounded bg-light">
                     <h5>About this test </h5>
-                    <p>This test your long term memory. Long term memory like our dusty storage box. It contains
-                        informative knowledge which will be stored in our brains forever.
+                    <p>This is a general assesment test. You can use it to see how well your memory is. You can also come back to it to practice for other memory tests.     
 
-                        If you want to stay on top of your scores you can see the dashboard </p>
+                        If you want to stay on top of your scores you can see the dashboard    </p>
                 </div>
             </div>
     </main>
