--- a/assessment_game6.html
+++ b/assessment_game6.html
@@ -49,8 +49,8 @@
                 </div>
                 <div class="logo d-flex pt-5 ">
                     <div class="m-auto ">
-                        <button id="yes" style="font-size: 3rem;" onclick="yes();" class="btn btn-orange px-5 mx-5">yes</button> <button id="no" onclick="no();"
-                            style="font-size: 3rem;" class="btn btn-blue px-5 mx-5">no</button>
+                        <button id="yes" style="font-size: 3rem;" onclick="yes();" class="btn btn-orange px-md-5 px-4 mx-3 mx-md-5">yes</button> <button id="no" onclick="no();"
+                            style="font-size: 3rem;" class="btn btn-blue px-md-5 px-4 mx-3 mx-md-5">no</button>
                     </div>
                 </div>
             </div>
@@ -59,10 +59,9 @@
             <div class="col-6 mt-5 mx-auto dash-card">
                 <div class="p-3 text-center rounded bg-light">
                     <h5>About this test </h5>
-                    <p>This test your long term memory. Long term memory like our dusty storage box. It contains
-                        informative knowledge which will be stored in our brains forever.
+                    <p>This is a general assesment test. You can use it to see how well your memory is. You can also come back to it to practice for other memory tests.     
 
-                        If you want to stay on top of your scores you can see the dashboard </p>
+                        If you want to stay on top of your scores you can see the dashboard    </p>
                 </div>
             </div>
     </main>
